# tdd-practice-solutions

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: caller_testing_linting.yml  push.testing.yml
katas/: game_of_life.py  game_of_life_ii.py  tictactoe.py
tests/: test_game_of_life.py  test_game_of_life_ii.py  test_tictactoe.py
